fixed spacing on contact section

--- a/src/container/ContactUs/ContactUs.scss
+++ b/src/container/ContactUs/ContactUs.scss
@@ -34,6 +34,7 @@
       @media screen and (min-width: 1024px) {
         width: 50%;
         padding-right: 8rem;
+        padding-left: 2rem;
       }
 
       h2 {
@@ -79,7 +80,7 @@
 
       @media screen and (min-width: 1024px) {
         width: 50%;
-        margin-top: 6.5rem;
+        margin-top: 5.5rem;
       }
 
       @media screen and (min-width: 1280px) {
